--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Gelato+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
-body {
-  font-family: 'GelatoSans-Regular', sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-/* .hero {
-  background-image: url('./images/blog2.jpg');
-  background-size: cover;
-  height: 400vh;
+.fixed-button {
+  position: fixed;
+  bottom: 20px; /* Distance from the bottom */
+  right: 20px;  /* Distance from the right */
+  padding: 10px 20px; /* Padding inside the button */
+  background-color: #000; /* Button color */
+  color: white; /* Text color */
+  border: none; /* Remove border */
+  border-radius: 5px; /* Rounded corners */
+  cursor: pointer; /* Change cursor to pointer */
+  z-index: 1000; /* Ensure it stays on top */
+  transition: background-color 0.3s; /* Smooth transition */
   display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-} */
-
-.features {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  gap: 10px;
 }
 
-.features li {
-  margin: 20px;
-  width: 30%;
+.fixed-button:hover {
+  background-color: #000;
+  color: white;
+  /* Darker shade on hover */
 }
-
-.features img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.testimonials {
-  background-color: #f7f7f7;
-  padding: 2em;
-}
-
-.testimonials .carousel {
-  display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
-}
-
-.testimonials .carousel-item {
-  margin: 20px;
-  width: 30%;
-}
-
-.testimonials img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-  border-radius: 10px;
-}
-
-.call-to-action {
-  background-color: #333;
-  color: #fff;
-  padding: 2em;
-  text-align: center;
-}
-
-.call-to-action button {
-  background-color: #fff;
-  color: #333;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
+@media (max-width: 768px) {
+  .fixed-button {
+   display: none;
+  }
 }
