--- a/src/styles/Bar.css
+++ b/src/styles/Bar.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Gelato+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 .bardiv{
     display: flex;
     justify-content: space-around;
@@ -15,6 +16,8 @@
     margin-block-end: 0em !important;
     margin-block-start: 0em !important;
     text-align: center;
+    font-family: 'GelatoSans-Regular', sans-serif !important;
+    letter-spacing: .04rem;
 }
 .barinmid{
     display: flex;
@@ -22,6 +25,11 @@
     justify-content: center;
     align-items: center;
     width: 25%;
+}
+@media only screen and (max-width: 1024px) {
+.bartxt{
+  font-size: 1.3rem;
+}
 }
 @media only screen and (max-width: 768px) {
     .bardiv{
