--- a/src/styles/MeetGeleto.css
+++ b/src/styles/MeetGeleto.css
@@ -62,8 +62,19 @@
     height: auto;
     border-radius: 8px;
   }
+  @media only screen and (max-width: 1200px) {
+    .meeetgel-container{
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+  }
   @media only screen and (max-width: 768px) {
     .meetgel-container{
       display: none;
     }
+  }
+  @media only screen and (max-width:480px){
+    .cta-button{
+      font-size: 0.8rem !important;
+     }
   }
