--- a/src/styles/Accelerate.css
+++ b/src/styles/Accelerate.css
@@ -5,6 +5,11 @@
   } */
 
 /* acc container */
+.fontmain{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
 .acc-container {
   display: flex;
   align-items: center;
