--- a/src/styles/Bar.css
+++ b/src/styles/Bar.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Gelato+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
+.fontmain{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
 .bardiv{
     display: flex;
     justify-content: space-around;
