--- a/src/styles/ElevateGeleto.css
+++ b/src/styles/ElevateGeleto.css
@@ -5,6 +5,11 @@
   } */
   
   /* elev container */
+  .fontmain{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+  }
   .elev-container {
     display: flex;
     align-items: center;
