--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -1,12 +1,17 @@
 /* HeroSection.css */
 @import url("https://fonts.googleapis.com/css2?family=Gelato+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
+.fontmain{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
 .hero-container {
   display: flex;
   justify-content: space-between;
   padding: 20px;
  
   background-color: #fff;
-  height: 80vh;
+  height: 75vh;
   padding-left: 70px;
   padding-right: 70px;
 }
@@ -21,7 +26,10 @@
 
 .hero-text h1 {
   font-size: 3.5rem;
-  font-family: 'GelatoSans-Regular', sans-serif;
+  /* font-family: 'GelatoSans-Regular', sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 .herosecondtxt {
   font-weight: 600;
@@ -29,7 +37,10 @@
   color: #000;
   margin-block-start: 0em !important;
   margin-block-end: 0em !important;
-  font-family: 'GelatoSans-Regular', sans-serif;
+  /* font-family: 'GelatoSans-Regular', sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .subtext {
@@ -118,6 +129,13 @@
 }
 
 @media only screen and (max-width: 992px) {
+  .peaksecondheader ul li {
+    padding: 5px !important;
+    /* gap: 3px !important; */
+  }
+  .peaksecondheader ul {
+    gap: 10px !important;
+  }
   .hero-text h1 {
     font-size: 2.2rem;
   }
