--- a/src/styles/InfoSection.css
+++ b/src/styles/InfoSection.css
@@ -1,5 +1,10 @@
 /* General styles */
 @import url("https://fonts.googleapis.com/css2?family=Gelato+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
+.fontmain{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
 .chooseone{
   padding: 10px;
 }
@@ -43,6 +48,7 @@
   .info-content li {
     font-size: 1.1rem;
     color: #333;
+    align-items: center;
     /* margin-bottom: 20px; */
     /* line-height: 1.5; */
   }
